--- a/Flagrum.Web/_Imports.razor
+++ b/Flagrum.Web/_Imports.razor
@@ -16,3 +16,4 @@
 @using Blazor.Diagrams.Components;
 @using Blazor.Diagrams.Components.Renderers;
 @using Blazor.Diagrams.Components.Groups;
+@using Microsoft.Extensions.Logging;
