--- a/Flagrum.Web/Styles/_reset.css
+++ b/Flagrum.Web/Styles/_reset.css
@@ -9,7 +9,7 @@
 }
 
 #blazor-error-ui {
-    background: #7e2020;
+    @apply bg-error;
     bottom: 0;
     -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
